syntax = "proto3";

package router_serialize;

message RouteInfo{
    uint32 index = 1;
    uint32 from = 2;
    uint32 to = 3;
    uint32 bus = 4;
    uint32 span_count = 5;
    double time = 6;
}

message Settings{
    double wait_time = 1;
    double velocity = 2;

    repeated RouteInfo routes = 5;
}


